# Centaur

./: .clang-format  .gitignore  CMakeLists.txt  Centaur.hpp  conanfile.txt  control.md  install.md  readme.md  vcpkg.json
Centaur/: CMakeLists.txt
Centaur/include/: AddUserDialog.hpp  CandleChartDialog.hpp  CandleViewWidget.hpp  CenListCtrl.hpp  Centaur.hpp  CentaurApp.hpp  CentaurGlobal.hpp  CentaurUIState.hpp  ConfigurationInterface.hpp  DAL.hpp  DepthChartDialog.hpp  FavoritesDialog.hpp  Globals.hpp  HTMLDelegate.hpp  LogDialog.hpp  Logger.hpp  LoginDialog.hpp  LongOperation.hpp  OrderbookDialog.hpp  PixmapMemCacheDialog.hpp  PluginsDialog.hpp  PortfolioModel.hpp  PortfolioWidget.hpp  ProtocolClient.hpp  ProtocolServer.hpp  QRCodeDialog.hpp  SettingsDialog.hpp  SettingsDialogData.hpp  ShortcutDialog.hpp  SplashDialog.hpp  TOTP.hpp  WatchListModel.hpp  WatchlistWidget.hpp  XMLHelper.hpp  crc64.hpp
Centaur/include/CandleChart/: CandleChartScene.hpp  CandleChartWidget.hpp  CandleItem.hpp  PriceAxisItem.hpp  TimeAxisItem.hpp
Centaur/qrc/: resource.qrc
Centaur/rcc/: resource.qrc
Centaur/src/: AddUserDialog.cpp  CandleChartDialog.cpp  CandleViewWidget.cpp  CenListCtrl.cpp  CentaurApp.cpp  CentaurLoadData.cpp  ConfigurationInterface.cpp  DAL.cpp  DepthChartDialog.cpp  FavoritesDialog.cpp  Globals.cpp  HTMLDelegate.cpp  LogDialog.cpp  Logger.cpp  LoggerFormatter.cpp  LoginDialog.cpp  LongOperation.cpp  OrderbookDialog.cpp  PixmapMemCacheDialog.cpp  Plugins.cpp  PluginsDialog.cpp  PortfolioModel.cpp  PortfolioWidget.cpp  ProtocolClient.cpp  ProtocolServer.cpp  QRCodeDialog.cpp  SettingsAdvancedPage.cpp  SettingsDialog.cpp  SettingsPluginsPage.cpp  SettingsSessionPage.cpp  SettingsShortcutsPage.cpp  ShortcutDialog.cpp  SplashDialog.cpp  TOTP.cpp  WatchlistModel.cpp  WatchlistWidget.cpp  main.cpp
Centaur/src/CandleChart/: CandleChartScene.cpp  CandleChartWidget.cpp  CandleItem.cpp  PriceAxisItem.cpp  TimeAxisItem.cpp
Centaur/ui/: AddUserDialog.ui  CandleChartDialog.ui  CandleViewWidget.ui  CentaurApp.ui  CentaurApp_old.ui  DepthChartDialog.ui  DialogTemplate.ui  FavoritesDialog.ui  LenghtyDialog.ui  LogDialog.ui  LoginDialog.ui  OrderbookDialog.ui  PixmapMemCacheDialog.ui  PluginsDialog.ui  QRCodeDialog.ui  SettingsDialog.ui  ShortcutDialog.ui  SplashDialog.ui  template.ui
Plugins/BinanceCS/: CMakeLists.txt
Plugins/BinanceCS/include/: BinanceCS.hpp
Plugins/BinanceCS/src/: BinanceCS.cpp  CandleSpotMarketWS.cpp
Plugins/BinanceSpot/: BinanceSPOT.md  CMakeLists.txt
Plugins/BinanceSpot/include/: AssetDetailDialog.hpp  BinanceSPOT.hpp  CoinInfoDialog.hpp  FeesDialog.hpp  NetworkAddressDialog.hpp  StatusDialog.hpp
Plugins/BinanceSpot/qrc/: resource.qrc
Plugins/BinanceSpot/res/: cryptocurrency logo.webarchive  resource.qrc
Plugins/BinanceSpot/src/: AssetDetailDialog.cpp  BinanceSPOT.cpp  BinanceSPOT_IExchange.cpp  BinanceSPOT_IStatus.cpp  BinnaceSPOT_IBase.cpp  CoinInfoDialog.cpp  FeesDialog.cpp  NetworkAddressDialog.cpp  SpotMarketWS.cpp  StatusDialog.cpp
Plugins/BinanceSpot/ui/: AssetDetailDialog.ui  CoinInfoDialog.ui  FeesDialog.ui  NetworkAddress.ui  NetworksDialog.ui  StatusDialog.ui
Plugins/BinanceSpotStatus/: CMakeLists.txt
Plugins/BinanceSpotStatus/include/: BinanceStatus.hpp  StatusDialog.hpp
Plugins/BinanceSpotStatus/qrc/: resources.qrc
Plugins/BinanceSpotStatus/src/: BinanceStatus.cpp  StatusDialog.cpp
Plugins/ExchangeRate/: CMakeLists.txt
Plugins/ExchangeRate/include/: ExchangeRate.hpp
Plugins/ExchangeRate/res/: resources.qrc
Plugins/ExchangeRate/src/: ExchangeRate.cpp
Plugins/include/: CentaurInterface.hpp  CentaurPlugin.hpp
Plugins/plid/: CMakeLists.txt  main.cpp
conan/debug/: BZip2Config.cmake  BZip2Targets.cmake  Boost-Target-debug.cmake  Boost-debug-x86_64-data.cmake  BoostConfig.cmake  BoostConfigVersion.cmake  BoostTargets.cmake  CMakePresets.json  CURL-Target-debug.cmake  CURL-debug-x86_64-data.cmake  CURLConfig.cmake  CURLConfigVersion.cmake  CURLTargets.cmake  FindBZip2.cmake  FindCURL.cmake  FindIconv.cmake  FindOpenSSL.cmake  FindSQLite3.cmake  FindXercesC.cmake  FindZLIB.cmake  Iconv-debug-x86_64-data.cmake  IconvConfig.cmake  IconvConfigVersion.cmake  IconvTargets.cmake  Libwebsockets-Target-debug.cmake  Libwebsockets-debug-x86_64-data.cmake  LibwebsocketsConfig.cmake  LibwebsocketsConfigVersion.cmake  LibwebsocketsTargets.cmake  OpenSSL-Target-debug.cmake  OpenSSLConfig.cmake  OpenSSLConfigVersion.cmake  OpenSSLTargets.cmake  SQLite3Config.cmake  SQLite3ConfigVersion.cmake  XercesC-debug-x86_64-data.cmake  XercesCConfig.cmake  ZLIB-Target-debug.cmake  ZLIB-debug-x86_64-data.cmake  ZLIBConfig.cmake  (+38 more)
conan/release/: CMakePresets.json  CURL-release-x86_64-data.cmake  CURLConfig.cmake  FindCURL.cmake  FindOpenSSL.cmake  FindSQLite3.cmake  FindXercesC.cmake  FindZLIB.cmake  Libwebsockets-Target-release.cmake  Libwebsockets-release-x86_64-data.cmake  LibwebsocketsConfig.cmake  OpenSSL-Target-release.cmake  OpenSSLConfig.cmake  SQLite3-release-x86_64-data.cmake  SQLite3Config.cmake  (+40 more)
contributing/: protocols.md
include/: Centaur.hpp
local/: cdb.sql  cent-icon.icns  keymap.schema.json  linux.keymap.json  logdb.sql  macos.keymap.json  plugins.schema.json  windows.keymap.json
test/: CMakeLists.txt  main.cpp  tests.cpp
tests/CandleWidgetTest/: CMakeLists.txt  TestData.cpp  TestDialog.cpp  TestDialog.hpp  main.cpp
tests/general/: CMakeLists.txt  tests.cpp
tools/bspot/: CMakeLists.txt
tools/bspot/include/: AppleDirectory.h  Application.hpp  Globals.hpp
tools/bspot/src/: AppleDirectory.mm  Application.cpp  KeysLoader.cpp  main.cpp
tools/btrader/: CMakeLists.txt
tools/btrader/include/: ApplicationMessages.hpp  ClientSocket.hpp  Globals.hpp  SpotStreams.hpp  TraderApplication.hpp  TraderGlobals.hpp
tools/btrader/include/apple/: AppleDirectory.h
tools/btrader/include/ui/: Icons.hpp
tools/btrader/src/: AppleDirectory.mm  ClientSocket.cpp  KeysLoader.cpp  SpotStreams.cpp  TraderApplication.cpp  main.cpp
tools/btrader/src/apple/: AppleDirectory.mm
tools/plpack/: CMakeLists.txt  main.cpp  plpack-readme.md
(+3 files in other folders)
